--- a/api-docs/public/login.html
+++ b/api-docs/public/login.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>API Documentation - Sign In</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
-  <script src="/js/auth.js"></script>
+  <script src="/js/auth.js" id="auth-script"></script>
 </head>
 <body class="bg-gray-100 dark:bg-gray-900 text-gray-900 dark:text-white min-h-screen flex items-center justify-center">
   <div class="w-full max-w-md p-8 bg-white dark:bg-gray-800 rounded-lg shadow-md">
