--- a/api-docs/public/login.html
+++ b/api-docs/public/login.html
@@ -5,7 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>API Documentation - Sign In</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
-  <script src="/js/auth.js" id="auth-script"></script>
+  <script src="js/auth-basepath.js"></script>
+  <script>
+    // Use the base path to correctly reference the auth.js file
+    document.write('<script src="' + (window.basePath || '') + '/js/auth.js" id="auth-script"><\/script>');
+  </script>
 </head>
 <body class="bg-gray-100 dark:bg-gray-900 text-gray-900 dark:text-white min-h-screen flex items-center justify-center">
   <div class="w-full max-w-md p-8 bg-white dark:bg-gray-800 rounded-lg shadow-md">
